# graphs

./: .gitignore  CHANGELOG.md  CHANGELOG_RECENT.md  CLAUDE.md  CMakeLists.txt  DNN_MODEL_ANALYSIS.md  GEMINI.md  README.md  SUMMARY.md  complexity.md  documentation_guide.md  error.txt  how-to-run-characterization.py  im2col.md  nx-trouble.txt  pyproject.toml  pytest.ini  requirements.txt  test_cache_extraction.py  test_mermaid_visualization.py  verify_fix.py
.claude/: settings.json
.claude/contributions/: 2026-01.jsonl  2026-04.jsonl  2026-05.jsonl
.claude/decisions/: DECISION-2026-01-23-001.yaml  DECISION-2026-04-16-001.yaml  DECISION-2026-04-16-002.yaml  DECISION-2026-05-05-001.yaml  DECISION-2026-05-07-001.yaml  DECISION-2026-05-10-001.yaml  DECISION-2026-05-12-001.yaml  DECISION-2026-05-12-002.yaml  template.yaml
.claude/hooks/: check-estimator-confidence.sh  protect-calibration-data.sh  syntax-check-python.sh
.claude/rules/: cli-tools.md  estimation.md  hardware-mappers.md  validation.md
.github/: CI_SETUP.md
.github/workflows/: ci.yml  coverage.yml  v4-validation.yml
analysis/energy/: architecture-comparison.md
analysis/tiling/: TILE_REUSE_RESEARCH_PLAN.md
archive/: compare_per_layer.py  debug_flop_mismatch.py  debug_windows_cache.py  inspect_fx_graph.py  test_efficientnet_family.py
calibration_data/: jetson_orin_agx_calibration.json  models.md
calibration_data/i7_12700K/: manifest.json
calibration_data/intel_core_i7_12700k/: calibration_metadata.json  manifest.json
calibration_data/jetson_orin_15w/: manifest.json  (+1 more)
ci/: check_no_legacy_json_reads.sh
cli/: PLAN_operating_modes.md  README.md  aggregate_efficiency.py  analyze_batch.py  analyze_batch_v2.py  analyze_cgra_energy.py  analyze_comprehensive.py  analyze_comprehensive_v1.py  analyze_comprehensive_v2.py  analyze_cpu_energy.py  analyze_dpu_energy.py  analyze_dsp_energy.py  analyze_gpu_energy.py  analyze_graph_mapping.py  analyze_jetson_roadmap.py  analyze_kpu_energy.py  analyze_product_trajectory.py  analyze_tpu_energy.py  automotive_hardware_comparison.py  benchmark.py  benchmark_battery_runtime.py  benchmark_cache_sweep.py  benchmark_layers.py  benchmark_mission_simulation.py  benchmark_platform_power.py  benchmark_sweep.py  benchmark_thermal_sustained.py  calibrate.py  calibrate_dla.py  calibrate_efficiency.py  calibrate_hardware.py  calibrate_hardware_commands.md  calibration_coverage.py  characterize_dispatch.py  check_tdp_feasibility.py  cleanup_calibration_data.py  compare_architecture_energy.py  compare_architectures.py  compare_architectures_energy.py  compare_automotive_adas.py  (+98 more)
docs/: EFFICIENCY_THRESHOLDS.md  SE_block_fusion_improvement.md  TENSOR_CORE_PERFORMANCE.md  Xilinx_Vitis_AI_spec.md  YOLO_FX_GITHUB_ISSUE_TEMPLATE.md  YOLO_FX_TRACING_ISSUES.md  bert-analysis.md  calibration_workflow.md  chip_area_estimates.md  claude-code-productivity-guide.md  cli_capability_tier_tools.md  cli_inventory.md  cli_renaming_implementation.md  cli_renaming_plan.md  complexity.md  computational-graphs.md  domain-flow-vs-polyhedral.md  edge_ai_categories.md  efficientnet_fusion_improvements.md  embodied_ai_research_plan.md  enhanced_attention_fusion_plan.md  enhanced_attention_fusion_project_complete.md  fusion_algorithm_proposal.md  fusion_results.md  fusion_validation.md  graph_partitioner_tutorial.md  graph_partitioning_design.md  guided_tour.md  hardware_characterization_2025-10.md  hardware_database_workflow.md  investigation_summary.md  kpu_architecture.md  mcp-server.md  mermaid_visualization_demo.md  mermaid_visualization_design.md  migration_guide_phase4_2.md  model_registry.md  operator_support.md  phase4_2_complete.md  phase4_comprehensive_validation_complete.md  (+15 more)
examples/: README.md  compare_models.py  demo_architectural_energy.py  demo_automatic_attention_decomposition.py  demo_decomposed_attention.py  demo_energy_analyzer.py  demo_fusion_comparison.py  demo_jetson_fabric.py  demo_kpu_fabric.py  demo_memory_estimator.py  demo_memory_structures.py  demo_new_performance_model.py  demo_roofline_analyzer.py  demo_tpu_fabric.py  quick_start_partitioner.py  test_all_hardware.py  test_cgra_mapper.py  test_cpu_vs_gpu_mapping.py  test_dpu_mapper.py  test_gpu_cpu_kpu_comparison.py  test_hardware_mapping.py  test_kpu_simple.py  visualize_partitioning.py
hardware_database/: README.md  schema.json
mlir/: fc_layer_10x5.mlir  install_mlir_python_bindings.bat  mlir-help.md  mlir-tools.md  mlir_fc_layer_gen.py
reports/: gpu_simt_energy.md
scripts/: agx_comprehensive.sh  agx_comprehensive_vit.sh  agx_troubleshooting.txt  check_cuda.py  check_torch_matmul.py  clear_cache_and_test.py  dla_diag.py  download_embodied_ai_models.py  install_nvidia_pytorch.sh  jetson-agx-software-install.txt  nvidia_pytorch_dependency.txt  validate_characterizer.py
src/: pattern.py
src/matmul/: CALIBRATION_PROPOSAL.md  CMakeLists.txt  PERFORMANCE_ANALYSIS.md  README.md  benchmark.cpp  benchmark_numpy.py  benchmark_v2.cpp  compare_all.sh  tiled_matmul.hpp  tiled_matmul_original.hpp  tiled_matmul_v2.hpp
tests/: README.md  arch_profile.py  conftest.py  test_dynamo_characterizer.py  test_end_to_end_phase3.py  test_energy_model_phase3.py  test_fusion_partitioner.py  test_graph_partitioner.py  test_mcp_server.py  test_precision_enum_identity.py  test_pydantic_adapter.py  test_workload_characterization.py  validate_arithmetic_intensity.py
tools/: diagnose_dip.py  energy_comparison_gpu_vs_kpu.py  energy_sweep_array_sizes.py  kpu_energy_advantage.html  kpu_energy_advantage_v2.html  oneLayerMLP.mlir  portable_calibration.py  pull_mobilenet_from_HF.py  tosa_converter.py
tools/pt/: CMakeLists.txt  checkpoint.py  complex_model.py  mlp_classifier.py  pytorch_model_inspector.cpp  pytorch_test_models.py  simple_cnn.py  simple_linear.pt  simple_linear.py  state_dict_only.py  verify_simple_linear.py  verify_simple_linear2.py
tools/pt/test_models/: checkpoint.pt  complex_model.pt  mlp_classifier.pt  simple_cnn.pt  simple_linear.pt  state_dict_only.pt
validation/: README.md  latency_check.md  test_latency_sanity.py
(+2956 files in other folders)
