[project]
name = "graphs"
version = "0.8.0"
description = "Synthetic DNN graph models and characterization tools"
requires-python = ">=3.8"
authors = [
    { name = "Branes.ai Team", email = "software@branes.ai"},
    { name = "Theodore Omtzigt", email = "theodore.omtzigt@branes.ai"},
    { name = "Domjan Baric", email = "domjan.baric@branes.ai"},
    { name = "Kishore Kondapi", email = "kishore.kondapi@branes.ai"}
]
dependencies = ["torch", "torchvision", "pandas", "psutil", "py-cpuinfo", "pyyaml"]

[project.optional-dependencies]
# For verdict-first output to agentic workflows
schemas = ["embodied-schemas"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["graphs*"]
exclude = ["graphs.*.tests*", "graphs.*.__pycache__*"]

